--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,25 @@
+# https://docs.haskellstack.org/en/stable/travis_ci/
+# https://github.com/haskell-distributed/cloud-haskell/blob/master/.travis.yml
+
 language: c
 
-# explicitly request container-based infrastructure
 sudo: false
+
+cache:
+  directories:
+  - $HOME/.stack/
 
 matrix:
   include:
     - env: CABALVER=1.24 GHCVER=8.0.1
-      addons: {apt: {packages: [cabal-install-1.24,ghc-8.0.1], sources: [hvr-ghc]}}
-    - env: CABALVER=head GHCVER=head
-      addons: {apt: {packages: [cabal-install-head,ghc-head],  sources: [hvr-ghc]}}
-
-  allow_failures:
-   - env: CABALVER=head GHCVER=head
+      addons: {apt: {packages: [cabal-install-1.24,ghc-8.0.1],sources: [hvr-ghc]}}
 
 before_install:
- - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
+  - mkdir -p ~/.local/bin
+  - export PATH=~/.local/bin:$PATH
+  - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar -xzO --wildcards '*/stack' > ~/.local/bin/stack
+  - chmod a+x ~/.local/bin/stack
 
 install:
- - cabal --version
- - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
- - travis_retry cabal update
- - time cabal install -j1 --only-dependencies --enable-tests --enable-benchmarks
-
-# Here starts the actual work to be performed for the package under test; any command which exits with a non-zero exit code causes the build to fail.
-script:
- - if [ -f configure.ac ]; then autoreconf -i; fi
- - time cabal configure --enable-tests --enable-benchmarks -v2 --disable-shared # -v2 provides useful information for debugging
- - time cabal build -j1  # this builds all libraries and executables (including tests/benchmarks)
- - time cabal test
- - time cabal check
+  - stack -j 2 setup 
+  - stack -j 2 build --haddock-arguments=--hyperlinked-source --haddock-deps 
